--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,7 @@
 ktor_version=2.1.1
 kotlin_version=1.7.10
+koin_version=3.2.2
+koin_ktor=3.2.2
+kmongo_version=4.7.1
 logback_version=1.2.11
 kotlin.code.style=official
